# gobs-engine

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml  build.rs
examples/assets/: README.md
examples/resources/: graph.ron  materials.ron  pipelines.ron  resources.ron
examples/shaders/: depth.frag  mesh.frag  mesh.vert  mesh_n.frag  phong.wgsl  scene.glsl  shader.frag  shader.vert  shader.wgsl  sky.comp  triangle.frag  triangle.vert
examples/shaders/glsl/: color.vert  mesh.frag  mesh.vert  mesh_n.frag  sky.comp
examples/shaders/in/: color.frag  depth.frag  mesh.frag  mesh.vert  mesh_n.frag  scene_light.glsl
examples/shaders/slang/: color.slang  color_buffer_reference.slang  color_mat.slang  mesh.slang  mesh.slang9
examples/src/: app.rs  controller.rs  lib.rs  ui.rs
gobs/: Cargo.toml
gobs-assets/: Cargo.toml  build.rs
gobs-assets/resources/: gltf_materials.ron
gobs-assets/shaders/glsl/: gltf.color.vert  gltf.color_light.vert  gltf.texture.frag  gltf.texture.vert  gltf.texture_n.frag  ui.frag  ui.glsl  ui.vert
gobs-assets/shaders/in/: depth.vert  gltf.color.frag  gltf.color.vert  gltf.color_light.frag  gltf.color_light.vert  gltf.texture.frag  gltf.texture.vert  light.glsl  scene_nolight.glsl  ui.frag  ui.glsl  ui.vert  wire.frag  wire.vert
gobs-assets/shaders/slang/: depth.slang  wire.slang
gobs-assets/shaders/spv/: README.md
gobs-assets/src/: gltf.rs  gltf_load.rs  lib.rs  manager.rs  shaders.rs
gobs-core/: Cargo.toml
gobs-core/src/: color.rs  data.rs  entity.rs  extent.rs  format.rs  geometry.rs  lib.rs  logger.rs  memory.rs  sampler.rs  transform.rs  utils.rs
gobs-core/src/data/: anymap.rs  object_arena.rs  objectmap.rs  registry.rs  sort.rs
gobs-core/src/entity/: camera.rs  instance.rs  light.rs  uniform.rs
gobs-core/src/geometry/: mesh.rs  primitive.rs  transform.rs  vertex.rs
gobs-core/src/material/: color.rs  texture.rs
gobs-core/src/memory/: allocator.rs  buddy.rs
gobs-core/src/utils/: anymap.rs  buddy.rs  pool.rs  registry.rs  rng.rs  timer.rs
gobs-egui/: Cargo.toml  build.rs
gobs-egui/resources/: materials.ron  ui_materials.ron
gobs-egui/src/: lib.rs  ui.rs
gobs-game/: Cargo.toml
gobs-game/src/: app.rs  asset.rs  context.rs  input.rs  lib.rs  options.rs
gobs-game/src/asset/: asset.rs  mod.rs  tilemap.rs
gobs-game/src/input/: handler.rs  input.rs
gobs-game/tests/: font.rs  line.rs  main.rs  showcase.rs  triangle.rs
gobs-gfx/: Cargo.toml  cargo.toml
gobs-gfx/src/: backend.rs  bindgroup.rs  buffer.rs  command.rs  device.rs  display.rs  error.rs  frontend.rs  image.rs  instance.rs  lib.rs  pipeline.rs  renderer.rs
gobs-gfx/src/backend/: vulkan.rs
gobs-gfx/src/frontend/: buffer.rs  command.rs  device.rs  display.rs  image.rs  pipeline.rs
gobs-material/: Cargo.toml
gobs-material/src/: atlas.rs  instance.rs  lib.rs  material.rs  texture.rs  vertex.rs
gobs-material/src/material/: color_mat.rs  normal_mat.rs  texture_mat.rs
gobs-ray/: Cargo.toml
gobs-ray/src/: buffer.rs  hit.rs  lib.rs  ray.rs  sphere.rs  tracer.rs
gobs-render/: Cargo.toml
gobs-render-graph/: Cargo.toml
gobs-render-graph/src/: context.rs  data.rs  error.rs  framedata.rs  graph.rs  job.rs  lib.rs  pass.rs  render_object.rs  stats.rs  task.rs  uniform.rs
gobs-render-graph/src/data/: material_data.rs  object_data.rs  scene_data.rs  texture_data.rs  uniform.rs
gobs-render-graph/src/graph/: frame.rs  graph_loader.rs  loader.rs  resource.rs
gobs-render-graph/src/pass/: bounds.rs  compute.rs  depth.rs  dummy.rs  forward.rs  material.rs  present.rs  select.rs  ui.rs  wire.rs
gobs-render-graph/src/resources/: mesh.rs  pipeline.rs  pipeline_config.rs  pipeline_loader.rs
gobs-render-hal/: Cargo.toml
gobs-render-hal/src/: backend.rs  bindings.rs  command.rs  data.rs  error.rs  hal.rs  lib.rs  pipeline.rs  vertex.rs
gobs-render-hal/src/backend/: vulkan.rs
gobs-render-hal/src/data/: align.rs  material_data.rs  object_data.rs  scene_data.rs  texture_data.rs  uniform.rs  vertex.rs
gobs-render/src/: backend.rs  batch.rs  camera.rs  color.rs  context.rs  data.rs  display.rs  font.rs  frame.rs  geometry.rs  graph.rs  instance.rs  lib.rs  light.rs  manager.rs  material.rs  materials.rs  mesh.rs  mesh_buffer.rs  model.rs  pass.rs  pipeline.rs  renderable.rs  renderer.rs  resources.rs  shader.rs  stats.rs  texture.rs  transform.rs
gobs-render/src/backend/: vulkan.rs
gobs-render/src/cache/: meshcache.rs  mod.rs  texturecache.rs
gobs-render/src/camera/: camera.rs
gobs-render/src/context/: display.rs  gfx.rs
gobs-render/src/data/: material_data.rs  texture_data.rs
gobs-render/src/geometry/: bounds.rs  mesh.rs  model.rs  vertex.rs
gobs-render/src/graph/: batch.rs  frame.rs  graph.rs  pass.rs  resource.rs
gobs-render/src/light/: light.rs
gobs-render/src/manager/: allocator.rs  gpu_mesh.rs  mesh_manager.rs
gobs-resource/: Cargo.toml
gobs-resource/src/: entity.rs  geometry.rs  lib.rs  load.rs  manager.rs  material.rs  resource.rs  tiles.rs
gobs-scene/: Cargo.toml  build.rs
gobs-scene/shaders/: gltf.color.vert  phong.wgsl  ui.wgsl  wire.wgsl
gobs-scene/src/: assets.rs  camera.rs  components.rs  data.rs  geometry.rs  gltf.rs  graph.rs  layer.rs  lib.rs  light.rs  manager.rs  mesh.rs  mesh_buffer.rs  model.rs  node.rs  renderable.rs  scene.rs  shape.rs  transform.rs  uniform_buffer.rs
gobs-utils/: Cargo.toml
gobs-utils/src/: lib.rs  load.rs  timer.rs
gobs-vulkan/: Cargo.toml  build.rs
gobs-vulkan/src/: alloc.rs  api.rs  backend.rs  buffer.rs  command.rs  debug.rs  descriptor.rs  device.rs  error.rs  feature.rs  framebuffer.rs  headless.rs  image.rs  images.rs  instance.rs  lib.rs  main.rs  memory.rs  physical.rs  pipeline.rs  query.rs  queue.rs  renderpass.rs  surface.rs  swapchain.rs  sync.rs
gobs-wgpu/: Cargo.toml  build.rs
gobs-wgpu/shaders/: light.wgsl  shader.wgsl  solid.wgsl  ui.wgsl
gobs-wgpu/src/: app.rs  camera.rs  gfx.rs  input.rs  lib.rs  light.rs  main.rs  model.rs  pass.rs  pipeline.rs  render.rs  resource.rs  scene.rs  shader.rs  shader_data.rs  state.rs
gobs/src/: lib.rs
(+295 files in other folders)
