[workspace]
members = [
    "examples",
    "gobs-assets",
    "gobs-core",
    "gobs-egui",
    "gobs-game",
    "gobs-render",
    "gobs-scene",
    "gobs-utils",
    "gobs-vulkan",
]
resolver = "2"

[workspace.package]
authors = ["franckv <franck.vdl@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies.gobs]
package = "gobs"
path = "./gobs"

[workspace.dependencies.gobs-assets]
package = "gobs-assets"
path = "./gobs-assets"

[workspace.dependencies.gobs-core]
package = "gobs-core"
path = "./gobs-core"

[workspace.dependencies.gobs-egui]
package = "gobs-egui"
path = "./gobs-egui"

[workspace.dependencies.gobs-game]
package = "gobs-game"
path = "./gobs-game"

[workspace.dependencies.gobs-render]
package = "gobs-render"
path = "./gobs-render"

[workspace.dependencies.gobs-scene]
package = "gobs-scene"
path = "./gobs-scene"

[workspace.dependencies.gobs-utils]
package = "gobs-utils"
path = "./gobs-utils"

[workspace.dependencies.gobs-vulkan]
package = "gobs-vulkan"
path = "./gobs-vulkan"

[workspace.dependencies]
ash = { version = "0.38", features = ["linked", "debug"] }
ash-window = "0.13"
anyhow = "1.0"
bitflags = "2"
bytemuck = { version = "1.14", features = ["derive"] }
egui = { version = "0.28", features = ["bytemuck", "serde"]}
env_logger = "0.11"
futures = "0.3"
fs_extra = "1.3"
glam = { version = "0.28", features = ["bytemuck", "serde"] }
gltf = "1"
gpu-allocator = { path = "../3rd/gpu-allocator", features = ["visualizer"]}
image = "0.25"
itertools = { version = "0.13" }
log = "0.4"
naga = {version = "0.20", features = ["glsl-in", "spv-out"]}
parking_lot = "0.12"
pollster = "0.3"
presser = "0.3"
rand = "0.8"
raw-window-handle = "0.6"
renderdoc = "0.12.1"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
slotmap = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
winit = "0.30"
