[workspace]
members = [
    "examples",
    "gobs-assets",
    "gobs-core",
    "gobs-egui",
    "gobs-game",
    "gobs-gfx",
    "gobs-render",
    "gobs-render-graph",
    "gobs-resource",
    "gobs-scene",
    "gobs-vulkan",
]
resolver = "2"

[workspace.package]
authors = ["franckv <franck.vdl@gmail.com>"]
edition = "2024"
version = "0.1.0"

[workspace.dependencies.gobs]
package = "gobs"
path = "./gobs"

[workspace.dependencies.gobs-assets]
package = "gobs-assets"
path = "./gobs-assets"

[workspace.dependencies.gobs-core]
package = "gobs-core"
path = "./gobs-core"

[workspace.dependencies.gobs-egui]
package = "gobs-egui"
path = "./gobs-egui"

[workspace.dependencies.gobs-game]
package = "gobs-game"
path = "./gobs-game"

[workspace.dependencies.gobs-gfx]
package = "gobs-gfx"
path = "./gobs-gfx"

[workspace.dependencies.gobs-render-graph]
package = "gobs-render-graph"
path = "./gobs-render-graph"

[workspace.dependencies.gobs-render]
package = "gobs-render"
path = "./gobs-render"


[workspace.dependencies.gobs-resource]
package = "gobs-resource"
path = "./gobs-resource"

[workspace.dependencies.gobs-scene]
package = "gobs-scene"
path = "./gobs-scene"

[workspace.dependencies.gobs-vulkan]
package = "gobs-vulkan"
path = "./gobs-vulkan"

[workspace.dependencies]
ash = { version = "0.38", features = ["linked", "debug"] }
ash-window = "0.13"
anyhow = "1.0"
bitflags = "2.9"
bytemuck = { version = "1.23", features = ["derive"] }
egui = { version = "0.31", features = ["bytemuck", "serde"] }
env_logger = "0.11"
futures = "0.3"
fs_extra = "1.3"
glam = { version = "0.30", features = ["bytemuck", "serde"] }
gltf = "1.4"
gpu-allocator = "0.27"
image = "0.25"
indexmap = "2.9"
itertools = { version = "0.14" }
naga = { version = "25", features = ["glsl-in", "spv-out"] }
parking_lot = "0.12"
pollster = "0.4"
presser = "0.3"
rand = "0.9"
raw-window-handle = "0.6"
renderdoc = "0.12.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slotmap = "1.0"
thiserror = "2.0"
tobj = "4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
winit = "0.30"

[profile.release-with-debug]
inherits = "release"
debug = true
