[workspace]
members = [
    "examples",
    "gobs",
    "gobs-assets",
    "gobs-build",
    "gobs-core",
    "gobs-egui",
    "gobs-game",
    "gobs-render",
    "gobs-render-graph",
    "gobs-render-hal",
    "gobs-resource",
    "gobs-scene",
    "gobs-vulkan",
]
resolver = "2"

[workspace.package]
authors = ["franckv <franck.vdl@gmail.com>"]
edition = "2024"
version = "0.1.0"

[workspace.dependencies.gobs]
path = "./gobs"

[workspace.dependencies.gobs-assets]
path = "./gobs-assets"

[workspace.dependencies.gobs-build]
path = "./gobs-build"

[workspace.dependencies.gobs-core]
path = "./gobs-core"

[workspace.dependencies.gobs-egui]
path = "./gobs-egui"

[workspace.dependencies.gobs-game]
path = "./gobs-game"

[workspace.dependencies.gobs-render-graph]
path = "./gobs-render-graph"

[workspace.dependencies.gobs-render-hal]
path = "./gobs-render-hal"

[workspace.dependencies.gobs-render]
path = "./gobs-render"

[workspace.dependencies.gobs-resource]
path = "./gobs-resource"

[workspace.dependencies.gobs-scene]
path = "./gobs-scene"

[workspace.dependencies.gobs-vulkan]
path = "./gobs-vulkan"

[workspace.dependencies]
ash = { version = "0.38", features = ["linked", "debug"] }
ash-window = "0.13"
anyhow = "1.0"
bitflags = { version="2.10", features=["serde"] }
bytemuck = { version = "1.24", features = ["derive"] }
egui = { version = "0.33", features = ["bytemuck", "serde"] }
egui_extras = { version = "0.33" }
env_logger = "0.11"
futures = "0.3"
fs_extra = "1.3"
glam = { version = "0.30", features = ["bytemuck", "serde"] }
gltf = "1.4"
gpu-allocator = "0.28"
image = "0.25"
indexmap = "2.12"
itertools = { version = "0.14" }
naga = { version = "28", features = ["glsl-in", "spv-out"] }
parking_lot = "0.12"
pollster = "0.4"
presser = "0.3"
rand = "0.9"
raw-window-handle = "0.6"
renderdoc = "0.12.1"
ron = "0.12"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slotmap = { version="1.0", features=["serde"] }
thiserror = "2.0"
tobj = "4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = "0.11"
uuid = { version = "1.19", features = ["serde", "v4"] }
winit = "0.30"

[profile.release-with-debug]
inherits = "release"
debug = true
