[package]
name = "examples"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
egui = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
gobs = { workspace = true }
gpu-allocator = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
fs_extra = { workspace = true }
