[package]
name = "examples"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
egui = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
gobs = { workspace = true }
gpu-allocator = { workspace = true }
pollster = { workspace = true }
renderdoc = { workspace = true }
slotmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
fs_extra = { workspace = true }
