[package]
name = "gobs-assets"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
glam = { workspace = true }
gltf = { workspace = true }
gobs-core = { workspace = true }
gobs-render = { workspace = true }
gobs-scene = { workspace = true }
log = { workspace = true }

[build-dependencies]
fs_extra = { workspace = true }
