[package]
name = "gobs-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
