[package]
name = "gobs-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true}
