[package]
name = "gobs-egui"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
gobs-core = { workspace = true }
gobs-game = { workspace = true }
gobs-gfx = { workspace = true }
gobs-render = { workspace = true }
gobs-utils = { workspace = true }
log = { workspace = true }
egui = { workspace = true }
glam = { workspace = true }
parking_lot = { workspace = true }
pollster = { workspace = true }
