[package]
name = "gobs-egui"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
gobs-core = { workspace = true }
gobs-game = { workspace = true }
gobs-gfx = { workspace = true }
gobs-render = { workspace = true }
gobs-resource = { workspace = true }
egui = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
