[package]
name = "gobs-game"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
gobs-core = { workspace = true }
gobs-gfx = { workspace = true }
gobs-render = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
winit = { workspace = true }
