[package]
name = "gobs-gfx"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
gobs-core = { workspace = true }
gobs-resource = { workspace = true }
gobs-vulkan = { workspace = true }
image = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
winit = { workspace = true }

[features]
default = ["vulkan"]
vulkan = []
