[package]
name = "gobs-material"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
gobs-core = { workspace = true }
gobs-render = { workspace = true }
gobs-utils = { workspace = true }
gobs-vulkan = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
