[package]
name = "gobs-material"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
gobs-core = { workspace = true }
gobs-render = { workspace = true }
gobs-vulkan = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
