[package]
name = "gobs-material"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
gobs-core = { workspace = true }
gobs-render = { workspace = true }
gobs-utils = { workspace = true }
gobs-vulkan = { workspace = true }
image = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
