[package]
name = "gobs-ray"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
gobs-core = { workspace = true }
gobs-material = { workspace = true }
gobs-render = { workspace = true }
gobs-scene = { workspace = true }
gobs-utils = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
