[package]
name = "gobs-render-graph"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
gobs-core = { workspace = true }
gobs-gfx = { workspace = true }
gobs-render-low = { workspace = true }
gobs-render-resources = { workspace = true }
gobs-resource = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
ron = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
ci = []
