[package]
name = "gobs-render-hal"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
gobs-core = { workspace = true }
gobs-resource = { workspace = true }
gobs-vulkan = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
slotmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
