[package]
name = "gobs-render"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
futures = { workspace = true }
glam = { workspace = true }
gobs-core = { workspace = true }
gobs-gfx = { workspace = true }
gobs-resource = { workspace = true }
gobs-render-graph = { workspace = true }
gobs-render-low = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
pollster = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
