[package]
name = "gobs-resource"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
gobs-core = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
