[package]
name = "gobs-scene"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
gltf = { workspace = true }
gobs-core = { workspace = true }
gobs-material = { workspace = true }
gobs-render = { workspace = true }
gobs-vulkan = { workspace = true }
gpu-allocator = { workspace = true }
log = { workspace = true }
slotmap = { workspace = true }
uuid = { workspace = true }
