[package]
name = "gobs-scene"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
gobs-core = { workspace = true }
gobs-render = { workspace = true }
gobs-utils = { workspace = true }
gpu-allocator = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
slotmap = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
fs_extra = { workspace = true }
