[package]
name = "gobs-scene"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
glam = { workspace = true }
gobs-core = { workspace = true }
gobs-render-graph = { workspace = true }
gobs-render = { workspace = true }
gobs-resource = { workspace = true }
slotmap = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
fs_extra = { workspace = true }
