[package]
name = "gobs-utils"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
name = "gobs_utils"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
