[package]
name = "gobs-vulkan"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
name = "gobs_vulkan"
path = "src/lib.rs"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
bytemuck = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
simplelog = { workspace = true }
winit = { workspace = true }