[package]
name = "gobs-vulkan"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[lib]
name = "gobs_vulkan"
path = "src/lib.rs"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
bytemuck = { workspace = true }
gobs-core = { workspace = true }
gpu-allocator = { workspace = true }
presser = { workspace = true }
raw-window-handle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
ci = []
