[package]
name = "gobs-wgpu"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }

gobs-utils = { path = "../gobs-utils" }
image = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
naga = { workspace = true }
uuid = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
