[package]
name = "gobs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
gobs-core = { workspace = true }
gobs-egui = { workspace = true }
gobs-game = { workspace = true }
gobs-render = { workspace = true }
gobs-scene = { workspace = true }
