[package]
name = "gobs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
gobs-assets = { workspace = true }
gobs-core = { workspace = true }
gobs-egui = { workspace = true }
gobs-game = { workspace = true }
gobs-render = { workspace = true }
gobs-scene = { workspace = true }
gobs-utils = { workspace = true }
