[package]
name = "gobs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
gobs-assets = { workspace = true }
gobs-core = { workspace = true }
gobs-egui = { workspace = true }
gobs-game = { workspace = true }
gobs-gfx = { workspace = true }
gobs-render-graph = { workspace = true }
gobs-render-low = { workspace = true }
gobs-render-resources = { workspace = true }
gobs-render = { workspace = true }
gobs-resource = { workspace = true }
gobs-scene = { workspace = true }
